Adding new endpoint to allow external apps to trigger oauth login steps
